# aiosonic

./: .coveragerc  .coveralls.yml  .gitignore  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  azure-pipelines.yml  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run.py  setup.cfg  setup.py  test-requirements.in  test-requirements.txt  tests.sh  tox.ini  travis_tests.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: python.yml  pythonapp.yml
aiosonic/: __init__.py  base_client.py  client.py  connection.py  connectors.py  dns_cache.py  exceptions.py  http2.py  http_parser.py  multipart.py  pools.py  pools.pyx  proxy.py  resolver.py  sse_client.py  sse_config.py  structures.py  tcp_helpers.py  timeout.py  types.py  utils.py  version.py  web_socket_client.py
djangotestproj/: manage.py
djangotestproj/djangotestproj/: settings.py  urls.py  views.py  wsgi.py
docs/: .buildinfo  conf.py
docs/doctrees/: environment.pickle  examples.doctree  index.doctree  reference.doctree
docs/html/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  reference.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt  reference.rst.txt
scripts/: performance.py
sourcedocs/: conf.py  examples.rst  index.rst  reference.rst  requirements.txt  sse_client.rst  websocket_client.rst
tests/: app.js  conftest.py  http1.mjs  package-lock.json  package.json  performance.py  test_aiosonic.py  test_aiosonic_ws.py  test_base_client.py  test_common.py  test_connection.py  test_dns_cache.py  test_http2.py  test_http2_additional.py  test_idna.py  test_idna_integration.py  test_import.py  test_multipart.py  test_proxy.py  test_sample.py  test_sse.py
tests/files/certs/: server.cert  server.key
tests/http2/: conftest.py  test_http2.py
tests/nodeapps/: basic.js  basic.mjs  http1.mjs  sse-server.mjs  ws-server.mjs  ws_server.mjs
