[tool.poetry]
name = "aiosonic"
version = "0.18.1"
description = "Async http client"
readme = "README.md"
license = "MIT"
homepage = "https://aiosonic.readthedocs.io/en/latest/"
repository = "https://github.com/sonic182/aiosonic"
authors = [
    "Johanderson Mogollon <johander1822@gmail.com>",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

packages = [
  {include = "aiosonic"},
  {include = "aiosonic_utils"}
]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.13"
charset-normalizer = "^3.3.2"
h2 = "^4.1.0"
onecache = "^0.6.0"

[tool.poetry.group.test.dependencies]
aiodns = "^3.2.0"
aiohttp = "^3.9.5"
asgiref = "^3.8.1"
black = "^24.4.2"
django = "<4.0.0"
click = "<8.1.0"
httpx = "^0.27.0"
proxy-py = "^2.4.4"
pytest = "^8.3.1"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.8"
pytest-black = "^0.3.12"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"
pytest-timeout = "^2.3.1"
uvicorn = "^0.30.3"
httptools = {version="^0.6.0", markers="sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'"}
mypy = {version="^1.0.0", markers="platform_python_implementation != 'PyPy'"}
mypy-extensions = {version="^1.0.0", markers="platform_python_implementation != 'PyPy'"}
pytest-mypy = {version="^0.10.3", markers="platform_python_implementation != 'PyPy'"}
typed-ast = {version="^1.4.0", markers="platform_python_implementation != 'PyPy'"}
uvloop = {version="^0.19.0", markers="sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'"}
requests = "^2.32.3"
winloop = {version = "^0.1.6", platform = "win32"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
