[tool.poetry]
name = "aiosonic"
version = "0.30.0"
description = "Async HTTP/WebSocket client"
readme = "README.md"
license = "MIT"
homepage = "https://aiosonic.readthedocs.io/en/latest/"
repository = "https://github.com/sonic182/aiosonic"
authors = [
    "Johanderson Mogollon <johander1822@gmail.com>",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Clients",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

packages = [
  {include = "aiosonic"},
  {include = "aiosonic_utils"}
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.15"
charset-normalizer = ">=2.0.0,<4.0.0"
h2 = "^4.1.0"
onecache = "^0.8.0"

[tool.poetry.group.test.dependencies]
aiodns = "^3.2.0"
asgiref = "^3.8.1"
black = "^24.4.2"
click = "<8.4.0"
h11 = ">=0.16.0"
httptools = {version="^0.6.0", markers="sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'"}
httpx = "^0.27.0"
proxy-py = "^2.4.4"
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
pytest-black = "^0.6.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"
pytest-sugar = "^1.1.0"
pytest-timeout = "^2.4.0"
requests = "^2.32.3"
uvicorn = "^0.30.3"
uvloop = {version=">=0.19,<0.21", markers="sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy' and python_version < '3.13.0'" }
winloop = {version = "^0.1.6", platform = "win32"}
ruff = "^0.14.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.1.1"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
